--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -69,5 +69,29 @@
         android:maxLines="1"
         tools:ignore="LabelFor" />
 
+    <TextView
+        android:text="@string/uid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lbl_uid"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/opt_server_port"
+        android:layout_marginStart="32dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:inputType="textCapCharacters"
+        android:ems="10"
+        android:id="@+id/opt_uid"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_uid"
+        android:maxLines="1"
+        tools:ignore="LabelFor" />
 
 </android.support.constraint.ConstraintLayout>
