--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -61,7 +61,7 @@
         android:ems="10"
         android:id="@+id/opt_server_port"
         android:layout_marginEnd="32dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btn_run"
         android:layout_marginStart="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
@@ -86,7 +86,7 @@
         android:ems="10"
         android:id="@+id/opt_uid"
         android:layout_marginEnd="32dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btn_run"
         android:layout_marginStart="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
